summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: Missing closing brace `}' assumed here
var isOver : Boolean = false
^Moria:1: error: Missing closing brace `}' assumed here
var isOver : Boolean = false
^Moria:1: error: expected class or object definition
var isOver : Boolean = false
^Moria:2: error: expected class or object definition
def Moria() {
^